# Proyecto-Sistemas-Expertos

./: DEBUG_MOVIMIENTO.md  GUIA_USO_SISTEMA_CORREGIDO.md  README.md  README_MOVIMIENTO_REAL.md  app_noemi.py  app_streamlit.py  callback_handler.py  etiquetado.py  incidentes_emergencia.db  install.sh  main.py  mapa_tacna.py  proyecto sistemas expertos.txt  pse.py  pyproject.toml  realtime_map.py  requirements.txt  simple_patrullas.py  simple_patrullas2.py  sistema_experto_emergencias.py  sistema_experto_emergencias_CORREGIDO.py  sistema_experto_emergencias_fixed.py
.devcontainer/: devcontainer.json
