[project]
name = "se-actualizado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.4.0",
    "folium>=0.14.0",
    "geopandas>=0.14.0",
    "geopy>=2.3.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "mapclassify>=2.5.0",
    "matplotlib>=3.6.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "osmnx>=1.6.0",
    "pandas>=1.5.0",
    "pillow>=9.0.0",
    "pyproj>=3.4.0",
    "pytz>=2025.2",
    "rtree>=1.0.0",
    "shapely>=2.0.0",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
]

[dependency-groups]
dev = [
    "streamlit>=1.46.1",
]
